Fix level container spacing

--- a/src/components/LevelContainer.module.css
+++ b/src/components/LevelContainer.module.css
@@ -9,7 +9,7 @@
 
 .level {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 0.75rem;
   justify-items: center;
   margin-inline: 1rem;
@@ -18,7 +18,7 @@
 }
 
 .level > * {
-  width: 85%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
